[gd_scene load_steps=5 format=3 uid="uid://cxw8twa3wn0ul"]

[ext_resource type="Script" uid="uid://chpyv12y6tctx" path="res://Scripts/Projectile/held_line_attack.gd" id="1_ktlcx"]
[ext_resource type="PackedScene" uid="uid://dxtlhaoalm7os" path="res://Scenes/Entities/Projectiles/Source/bullet_source.tscn" id="2_ktlcx"]
[ext_resource type="PackedScene" uid="uid://tp6w2ryf4e56" path="res://Scenes/Entities/Projectiles/held_projectile.tscn" id="3_ktlcx"]

[sub_resource type="Curve2D" id="Curve2D_7jyxy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -500, 0, 0, 0, 0, 0, 500, 0)
}
point_count = 2

[node name="HeldLineAttack" type="Node2D"]
script = ExtResource("1_ktlcx")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, -1)
curve = SubResource("Curve2D_7jyxy")

[node name="FireTimer" type="Timer" parent="Path2D"]
wait_time = 0.03
autostart = true

[node name="MovingBulletPattern" type="PathFollow2D" parent="Path2D"]
position = Vector2(500, 0)
progress = 1000.0
rotates = false

[node name="BulletSource" parent="Path2D/MovingBulletPattern" instance=ExtResource("2_ktlcx")]
position = Vector2(0.00012207, 0)
rotation = 1.5708
projectile = ExtResource("3_ktlcx")
group = "BoxAttack"

[connection signal="timeout" from="Path2D/FireTimer" to="." method="_on_fire_timer_timeout"]
